# semantic-find

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements_dev.txt
data/: Frankenstein-TrimmedForIngestion.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
scripts/: setup_db.py
src/: convert_pdf_to_text.py  ocr_pdf_to_text.py  pdf_to_text.py
src/semantic_find/: __init__.py  cli.py  datamodels.py  ngrams.py  parsers.py  semantic_find.py
tests/: __init__.py  test_semantic_find.py
